Add weekly filter script to index.html

--- a/index.html
+++ b/index.html
@@ -541,5 +541,7 @@
 </div>
 </div>
 
-<script src="app.js"></script></body>
+<scri<script src="app.js"></script>
+    <script src="weekFilter.js"></script>
+    </body>
 </html>
