Load weekFilter.js script after app.js and fix closing tags

--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
 </div>
 </div>
 
-<scri<script src="app.js"></script>
+<script src="app.js"></script>
     <script src="weekFilter.js"></script>
     </body>
 </html>
